# -

./: README-Cherry-Studio.md  README-EN.md  README-MCP-FAQ-EN.md  README-MCP-FAQ.md  README.md  index.html  pyproject.toml  requirements.txt  setup-mac.sh  setup-windows-en.bat  setup-windows.bat  start-http.bat  start-http.sh
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-ai-and-config.yml
.github/workflows/: clean-crawler.yml  crawler.yml  docker.yml
config/: ai_analysis_prompt.txt  ai_translation_prompt.txt  config.yaml  frequency_words.txt
docker/: .env  Dockerfile  Dockerfile.mcp  docker-compose-build.yml  docker-compose.yml  entrypoint.sh  manage.py
mcp_server/: __init__.py  server.py
mcp_server/services/: __init__.py  cache_service.py  data_service.py  parser_service.py
mcp_server/tools/: __init__.py  analytics.py  config_mgmt.py  data_query.py  search_tools.py  storage_sync.py  system.py
mcp_server/utils/: __init__.py  date_parser.py  errors.py  validators.py
output/news/: 2025-12-21.db  2025-12-22.db  2025-12-23.db  2025-12-24.db  2025-12-25.db  2025-12-26.db  2025-12-27.db
trendradar/: __init__.py  __main__.py  context.py
trendradar/ai/: __init__.py  analyzer.py  formatter.py  translator.py
trendradar/core/: __init__.py  analyzer.py  config.py  data.py  frequency.py  loader.py
trendradar/crawler/: __init__.py  fetcher.py
trendradar/notification/: __init__.py  batch.py  dispatcher.py  formatters.py  push_manager.py  renderer.py  senders.py  splitter.py
trendradar/report/: __init__.py  formatter.py  generator.py  (+3 more)
(+14 files in other folders)
